log applitools configuration after calling eyes.open